# backendFastApi

./: .gitignore  docker-compose.yml  pgadmin-servers.json  pyproject.toml  test_infra.py
alembic/: env.py
alembic/versions/: a3a120cc3acb_crear_tablas_iniciales.py
app/: database.py  main.py
app/api/: inventories.py  items.py  players.py
app/core/: config.py  logger.py  redis.py
app/crud/: inventory.py  item.py  player.py
app/middleware/: log_middleware.py
app/models/: base.py
app/schemas/: inventory.py  item.py  player.py
scripts/: init.sql
tests/: conftest.py  test_players.py
